--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
   "eslint.alwaysShowStatus": true,
   "eslint.validate": ["javascript", "javascriptreact", "markdown", "vue"],
   "i18n-ally.localesPaths": "src/locales",
-  "stylelint.validate": ["scss", "vue"]
+  "stylelint.validate": ["scss", "vue"],
+  "cSpell.words": ["fullheight", "Vuero", "vueuse"]
 }
